# hookele_coding_agent

./: .gitignore  CLAUDE.md  README.md  blog.md  pyproject.toml
adapters/: __init__.py
adapters/harbor/: __init__.py  agent.py  apply_diff.py  skills.py  tools.py  utils.py
hookele/: __init__.py
skills/: async_cancellation.md  configure-git-webserver.md  crack-7z-hash.md  extract-elf.md  financial_document_processor.md  mailman.md  rstan-to-pystan.md  sanitize-git-repo.md  sparql_university.md  spec_compliance.md  sql_optimization.md  write-compressor.md
